--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,6 @@ test/
 .idea/
 .classpath
 .project
-CustomSecurityPlugin.iml
-CustomSecurityPlugin-grailsPlugins.iml
+*.iml
 workspace.xml
 grails-custom-security-plugin-*.zip
